--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "@babel/core": "7.12.10",
     "@babel/preset-env": "7.12.10",
     "@babel/preset-react": "7.12.10",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
-    "@types/react-router": "^5.1.8",
-    "@types/react-router-dom": "^5.1.6",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/react-router": "5.1.8",
+    "@types/react-router-dom": "5.1.6",
     "@typescript-eslint/eslint-plugin": "4.10.0",
     "@typescript-eslint/parser": "4.10.0",
     "babel-loader": "8.2.2",
@@ -59,10 +59,10 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
-    "easy-bem": "^1.0.2",
+    "easy-bem": "1.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-router-dom": "^5.2.0"
+    "react-router-dom": "5.2.0"
   },
   "husky": {
     "hooks": {
