--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "webpack-dev-server": "3.11.0"
   },
   "dependencies": {
+    "axios": "0.21.0",
     "easy-bem": "1.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
