--- a/.editorconfig
+++ b/.editorconfig
@@ -1,14 +1,13 @@
 root = true
 
-[*.{js,ts,jsx,tsx}]
+[*]
 charset = utf-8
-end_of_line = crlf
+end_of_line = lf
 indent_size = 4
 indent_style = space
-insert_final_newline = false
+insert_final_newline = true
 max_line_length = 120
 tab_width = 4
 
 [*.scss]
-indent_style = space
 indent_size = 2
