--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@babel/core": "7.12.10",
     "@babel/preset-env": "7.12.10",
     "@babel/preset-react": "7.12.10",
+    "@types/classnames": "2.2.11",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-router": "5.1.8",
@@ -60,6 +61,7 @@
   },
   "dependencies": {
     "axios": "0.21.0",
+    "classnames": "2.2.6",
     "easy-bem": "1.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
