--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "eslint": "eslint --ext .ts --ext .tsx src/",
     "eslint:fix": "eslint --ext .ts --ext .tsx src/ --fix",
     "stylelint": "stylelint ./src/**/*.scss",
-    "stylelint:fix": "stylelint ./src/**/*.scss --fix"
+    "stylelint:fix": "stylelint ./src/**/*.scss --fix",
+    "server": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -42,6 +43,7 @@
     "eslint": "7.15.0",
     "eslint-config-xo": "^0.33.1",
     "eslint-plugin-react": "^7.21.5",
+    "express": "4.17.1",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "4.5.0",
     "husky": "4.3.6",
@@ -56,10 +58,11 @@
     "typescript": "4.1.3",
     "webpack": "5.10.1",
     "webpack-cli": "4.2.0",
-    "webpack-dev-server": "3.11.0"
+    "webpack-dev-server": "3.11.0",
+    "workbox-webpack-plugin": "6.0.2"
   },
   "dependencies": {
-    "axios": "0.21.0",
+    "axios": "0.21.1",
     "easy-bem": "1.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
