--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "webpack serve --env NODE_ENV=development",
     "build": "webpack --env NODE_ENV=production",
     "eslint": "eslint --ext .ts --ext .tsx src/",
@@ -28,6 +28,9 @@
     "@babel/core": "7.12.10",
     "@babel/preset-env": "7.12.10",
     "@babel/preset-react": "7.12.10",
+    "@types/enzyme": "3.10.8",
+    "@types/enzyme-adapter-react-16": "1.0.6",
+    "@types/jest": "26.0.20",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-router": "5.1.8",
@@ -39,12 +42,15 @@
     "copy-webpack-plugin": "7.0.0",
     "css-loader": "5.0.1",
     "css-minimizer-webpack-plugin": "1.1.5",
+    "enzyme": "3.11.0",
+    "enzyme-adapter-react-16": "1.15.6",
     "eslint": "7.15.0",
     "eslint-config-xo": "^0.33.1",
     "eslint-plugin-react": "^7.21.5",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "4.5.0",
     "husky": "4.3.6",
+    "jest": "26.6.3",
     "mini-css-extract-plugin": "1.3.3",
     "resolve-url-loader": "3.1.2",
     "sass": "1.30.0",
@@ -52,6 +58,7 @@
     "stylelint": "13.8.0",
     "stylelint-config-standard": "20.0.0",
     "stylelint-scss": "3.18.0",
+    "ts-jest": "26.4.4",
     "ts-loader": "8.0.12",
     "typescript": "4.1.3",
     "webpack": "5.10.1",
