--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,20 @@
 {
-  "compilerOptions": {
-    "jsx": "react",
-    "noImplicitAny": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "alwaysStrict": true,
-    "sourceMap": true,
-    "strictNullChecks": true,
-    "noEmitOnError": true,
-    "removeComments": false,
-    "target": "es2017",
-    "module": "ES6",
-    "moduleResolution": "node",
-    "esModuleInterop": true,
-  }
+    "compilerOptions": {
+        "jsx": "react",
+        "noImplicitAny": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "alwaysStrict": true,
+        "sourceMap": true,
+        "strictNullChecks": true,
+        "noEmitOnError": true,
+        "removeComments": false,
+        "target": "es2017",
+        "module": "ES6",
+        "moduleResolution": "node",
+        "esModuleInterop": true,
+        "types": [
+            "jest"
+        ]
+    }
 }
