--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react-dom": "17.0.0",
     "@types/react-router": "5.1.8",
     "@types/react-router-dom": "5.1.6",
+    "@types/react-tooltip": "4.2.4",
     "@typescript-eslint/eslint-plugin": "4.10.0",
     "@typescript-eslint/parser": "4.10.0",
     "babel-loader": "8.2.2",
@@ -53,6 +54,7 @@
     "stylelint": "13.8.0",
     "stylelint-config-standard": "20.0.0",
     "stylelint-scss": "3.18.0",
+    "svg-inline-loader": "0.8.2",
     "ts-loader": "8.0.12",
     "typescript": "4.1.3",
     "webpack": "5.10.1",
@@ -65,7 +67,9 @@
     "easy-bem": "1.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-router-dom": "5.2.0"
+    "react-inlinesvg": "2.2.2",
+    "react-router-dom": "5.2.0",
+    "react-tooltip": "4.2.13"
   },
   "husky": {
     "hooks": {
