--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "stylelint-config-standard": "20.0.0",
     "stylelint-scss": "3.18.0",
     "svg-inline-loader": "0.8.2",
+    "terser-webpack-plugin": "5.1.1",
     "ts-loader": "8.0.12",
     "typescript": "4.1.3",
     "webpack": "5.10.1",
