--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "baseUrl": "src",
     "jsx": "react",
     "noImplicitAny": true,
     "noUnusedLocals": true,
@@ -12,6 +13,13 @@
     "target": "es2017",
     "module": "ES6",
     "moduleResolution": "node",
-    "esModuleInterop": true,
-  }
+    "esModuleInterop": true
+  },
+    "paths": {
+        "api/*": [ "api/*" ],
+        "components/*": [ "components/*" ],
+        "pages/*": [ "pages/*" ],
+        "types/*": [ "types/*" ],
+        "misc/*": [ "misc/*" ]
+    }
 }
