--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-react": "7.12.10",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "@types/react-redux": "7.1.15",
     "@types/react-router": "5.1.8",
     "@types/react-router-dom": "5.1.6",
     "@typescript-eslint/eslint-plugin": "4.10.0",
@@ -46,6 +47,7 @@
     "html-webpack-plugin": "4.5.0",
     "husky": "4.3.6",
     "mini-css-extract-plugin": "1.3.3",
+    "redux-devtools-extension": "2.13.8",
     "resolve-url-loader": "3.1.2",
     "sass": "1.30.0",
     "sass-loader": "10.1.0",
@@ -63,7 +65,9 @@
     "easy-bem": "1.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-router-dom": "5.2.0"
+    "react-redux": "7.2.2",
+    "react-router-dom": "5.2.0",
+    "redux-thunk": "2.3.0"
   },
   "husky": {
     "hooks": {
