--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
         ]
     },
     "paths": {
+        "public/*": [ "../public/*" ],
         "api/*": [ "api/*" ],
         "components/*": [ "components/*" ],
         "pages/*": [ "pages/*" ],
