refactored auth pages

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,8 +23,8 @@
     "paths": {
         "api/*": [ "api/*" ],
         "components/*": [ "components/*" ],
+        "common/*": [ "common/*" ],
         "pages/*": [ "pages/*" ],
         "types/*": [ "types/*" ],
-        "misc/*": [ "misc/*" ]
     }
 }
