--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,8 +24,8 @@
         "public/*": [ "../public/*" ],
         "api/*": [ "api/*" ],
         "components/*": [ "components/*" ],
+        "common/*": [ "common/*" ],
         "pages/*": [ "pages/*" ],
         "types/*": [ "types/*" ],
-        "misc/*": [ "misc/*" ]
     }
 }
