--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@babel/preset-env": "7.12.10",
     "@babel/preset-react": "7.12.10",
     "@types/classnames": "2.2.11",
+    "@types/howler": "2.2.1",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-redux": "7.1.15",
@@ -71,6 +72,7 @@
     "axios": "0.21.1",
     "classnames": "2.2.6",
     "easy-bem": "1.0.2",
+    "howler": "2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-inlinesvg": "2.2.2",
