--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "webpack serve --env NODE_ENV=development",
     "build": "webpack --env NODE_ENV=production",
-    "deploy": "npm run build && node server.js",
+    "server": "node index.js",
+    "deploy": "npm run build && npm run server",
     "eslint": "eslint --ext .ts --ext .tsx src/",
     "eslint:fix": "eslint --ext .ts --ext .tsx src/ --fix",
     "stylelint": "stylelint ./src/**/*.scss",
@@ -29,13 +30,17 @@
     "@babel/core": "7.12.10",
     "@babel/preset-env": "7.12.10",
     "@babel/preset-react": "7.12.10",
+    "@babel/preset-typescript": "7.12.13",
+    "@babel/register": "7.12.13",
     "@types/classnames": "2.2.11",
+    "@types/express": "4.17.11",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-redux": "7.1.15",
     "@types/react-router": "5.1.8",
     "@types/react-router-dom": "5.1.6",
     "@types/react-tooltip": "4.2.4",
+    "@types/webpack-node-externals": "2.5.0",
     "@typescript-eslint/eslint-plugin": "4.10.0",
     "@typescript-eslint/parser": "4.10.0",
     "babel-loader": "8.2.2",
@@ -51,6 +56,9 @@
     "html-webpack-plugin": "4.5.0",
     "husky": "4.3.6",
     "mini-css-extract-plugin": "1.3.3",
+    "nodemon": "2.0.7",
+    "npm-run-all": "4.1.5",
+    "null-loader": "4.0.1",
     "redux-devtools-extension": "2.13.8",
     "resolve-url-loader": "3.1.2",
     "sass": "1.30.0",
@@ -65,20 +73,32 @@
     "webpack": "5.10.1",
     "webpack-cli": "4.2.0",
     "webpack-dev-server": "3.11.0",
+    "webpack-node-externals": "2.5.2",
     "workbox-webpack-plugin": "6.0.2"
   },
   "dependencies": {
+    "@types/compression": "1.7.0",
+    "@types/copy-webpack-plugin": "6.4.0",
+    "@types/css-minimizer-webpack-plugin": "1.1.1",
+    "@types/mini-css-extract-plugin": "1.2.2",
+    "@types/react-helmet": "6.1.0",
+    "@types/terser-webpack-plugin": "5.0.2",
+    "@types/workbox-webpack-plugin": "5.1.5",
     "axios": "0.21.1",
     "classnames": "2.2.6",
+    "compression": "1.7.4",
+    "connected-react-router": "6.8.0",
     "easy-bem": "1.0.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-helmet": "6.1.0",
     "react-inlinesvg": "2.2.2",
     "react-redux": "7.2.2",
     "react-router-dom": "5.2.0",
     "react-tooltip": "4.2.13",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "typesafe-actions": "5.1.0"
   },
   "husky": {
     "hooks": {
