--- a/package.json
+++ b/package.json
@@ -29,15 +29,16 @@
     "@babel/core": "7.12.10",
     "@babel/preset-env": "7.12.10",
     "@babel/preset-react": "7.12.10",
+    "@types/classnames": "2.2.11",
     "@types/enzyme": "3.10.8",
     "@types/enzyme-adapter-react-16": "1.0.6",
     "@types/jest": "26.0.20",
-    "@types/classnames": "2.2.11",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-redux": "7.1.15",
     "@types/react-router": "5.1.8",
     "@types/react-router-dom": "5.1.6",
+    "@types/react-test-renderer": "17.0.0",
     "@types/react-tooltip": "4.2.4",
     "@typescript-eslint/eslint-plugin": "4.10.0",
     "@typescript-eslint/parser": "4.10.0",
@@ -57,6 +58,7 @@
     "husky": "4.3.6",
     "jest": "26.6.3",
     "mini-css-extract-plugin": "1.3.3",
+    "react-test-renderer": "17.0.1",
     "redux-devtools-extension": "2.13.8",
     "resolve-url-loader": "3.1.2",
     "sass": "1.30.0",
@@ -64,9 +66,9 @@
     "stylelint": "13.8.0",
     "stylelint-config-standard": "20.0.0",
     "stylelint-scss": "3.18.0",
-    "ts-jest": "26.4.4",
     "svg-inline-loader": "0.8.2",
     "terser-webpack-plugin": "5.1.1",
+    "ts-jest": "26.4.4",
     "ts-loader": "8.0.12",
     "typescript": "4.1.3",
     "webpack": "5.10.1",
@@ -90,7 +92,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run eslint && npm run stylelint"
+      "pre-commit": "npm test && npm run eslint && npm run stylelint"
     }
   }
 }
