fix after review

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "start": "webpack serve --env NODE_ENV=development",
     "build": "webpack --env NODE_ENV=production",
-    "deploy": "npm run build && node server.js",
+    "deploy": "npm test && npm run build && node server.js",
     "eslint": "eslint --ext .ts --ext .tsx src/",
     "eslint:fix": "eslint --ext .ts --ext .tsx src/ --fix",
     "stylelint": "stylelint ./src/**/*.scss",
@@ -92,7 +92,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test && npm run eslint && npm run stylelint"
+      "pre-commit": "npm run eslint && npm run stylelint"
     }
   }
 }
