fixed hot functionality

--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start:webpack": "webpack serve --env NODE_ENV=development --open",
-    "start:server": "cross-env NODE_ENV=development nodemon index.js --watch dist/server.js",
-      "build:dev": "webpack --env NODE_ENV=development",
-      "build": "webpack --env NODE_ENV=production",
-    "server": "node index.js",
+    "start": "webpack --env NODE_ENV=development --config webpack/server.config.ts && npm run server:dev",
+    "server:dev": "cross-env NODE_ENV=development node dist/server.js",
+    "server": "node dist/server.js",
+    "build": "webpack --env NODE_ENV=production",
     "deploy": "npm run build && npm run server",
     "eslint": "eslint --ext .ts --ext .tsx src/",
     "eslint:fix": "eslint --ext .ts --ext .tsx src/ --fix",
