--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint": "7.15.0",
     "eslint-config-xo": "^0.33.1",
     "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "4.2.0",
     "express": "4.17.1",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "4.5.0",
