--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "axios": "0.21.1",
     "classnames": "2.2.6",
     "easy-bem": "1.0.2",
+    "pg": "8.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-inlinesvg": "2.2.2",
@@ -80,7 +81,10 @@
     "react-tooltip": "4.2.13",
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "reflect-metadata": "0.1.13",
+    "reselect": "4.0.0",
+    "sequelize": "6.5.0",
+    "sequelize-typescript": "2.1.0"
   },
   "husky": {
     "hooks": {
