--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,8 @@
         "module": "ES6",
         "moduleResolution": "node",
         "esModuleInterop": true,
+        "experimentalDecorators": true,
+        "emitDecoratorMetadata": true,
         "lib": [
             "es2017",
             "webworker",
