--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack serve --env NODE_ENV=development",
+    "start": "webpack --env NODE_ENV=development --config webpack/server.config.ts && npm run server:dev",
+    "server:dev": "cross-env NODE_ENV=development node dist/server.js",
+    "server": "node dist/server.js",
     "build": "webpack --env NODE_ENV=production",
-    "server": "node index.js",
     "deploy": "npm run build && npm run server",
     "eslint": "eslint --ext .ts --ext .tsx src/",
     "eslint:fix": "eslint --ext .ts --ext .tsx src/ --fix",
@@ -32,20 +33,26 @@
     "@babel/preset-react": "7.12.10",
     "@babel/preset-typescript": "7.12.13",
     "@babel/register": "7.12.13",
+    "@hot-loader/react-dom": "17.0.1",
     "@types/classnames": "2.2.11",
     "@types/express": "4.17.11",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "@types/react-hot-loader": "4.1.1",
     "@types/react-redux": "7.1.15",
     "@types/react-router": "5.1.8",
     "@types/react-router-dom": "5.1.6",
     "@types/react-tooltip": "4.2.4",
+    "@types/webpack-dev-middleware": "4.1.0",
+    "@types/webpack-hot-middleware": "2.25.3",
     "@types/webpack-node-externals": "2.5.0",
     "@typescript-eslint/eslint-plugin": "4.10.0",
     "@typescript-eslint/parser": "4.10.0",
     "babel-loader": "8.2.2",
     "clean-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "7.0.0",
+    "cross-env": "7.0.3",
+    "css-hot-loader": "1.4.4",
     "css-loader": "5.0.1",
     "css-minimizer-webpack-plugin": "1.1.5",
     "eslint": "7.15.0",
@@ -60,10 +67,13 @@
     "nodemon": "2.0.7",
     "npm-run-all": "4.1.5",
     "null-loader": "4.0.1",
+    "react-hot-loader": "4.13.0",
+    "react-refresh": "0.9.0",
     "redux-devtools-extension": "2.13.8",
     "resolve-url-loader": "3.1.2",
     "sass": "1.30.0",
     "sass-loader": "10.1.0",
+    "start-server-webpack-plugin": "2.2.5",
     "stylelint": "13.8.0",
     "stylelint-config-standard": "20.0.0",
     "stylelint-scss": "3.18.0",
@@ -72,8 +82,9 @@
     "ts-loader": "8.0.12",
     "typescript": "4.1.3",
     "webpack": "5.10.1",
-    "webpack-cli": "4.2.0",
-    "webpack-dev-server": "3.11.0",
+    "webpack-cli": "4.5.0",
+    "webpack-dev-server": "3.11.2",
+    "webpack-hot-middleware": "2.25.0",
     "webpack-node-externals": "2.5.2",
     "workbox-webpack-plugin": "6.0.2"
   },
@@ -100,11 +111,12 @@
     "redux": "4.0.5",
     "redux-thunk": "2.3.0",
     "reselect": "4.0.0",
-    "typesafe-actions": "5.1.0"
+    "typesafe-actions": "5.1.0",
+    "webpack-dev-middleware": "4.1.0"
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run eslint && npm run stylelint"
+      "pre-commit": "npm run eslint:fix && npm run stylelint:fix"
     }
   }
 }
