--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@hot-loader/react-dom": "17.0.1",
     "@types/classnames": "2.2.11",
     "@types/express": "4.17.11",
+    "@types/morgan": "1.9.2",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-hot-loader": "4.1.1",
@@ -97,11 +98,13 @@
     "@types/terser-webpack-plugin": "5.0.2",
     "@types/workbox-webpack-plugin": "5.1.5",
     "axios": "0.21.1",
+    "body-parser": "1.19.0",
     "classnames": "2.2.6",
     "compression": "1.7.4",
     "connected-react-router": "6.8.0",
     "easy-bem": "1.0.2",
     "mongoose": "5.11.18",
+    "morgan": "1.10.0",
     "pg": "8.5.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
@@ -114,10 +117,11 @@
     "redux-thunk": "2.3.0",
     "reflect-metadata": "0.1.13",
     "reselect": "4.0.0",
-    "typesafe-actions": "5.1.0",
-    "webpack-dev-middleware": "4.1.0",
     "sequelize": "6.5.0",
-    "sequelize-typescript": "2.1.0"
+    "sequelize-cli": "6.2.0",
+    "sequelize-typescript": "2.1.0",
+    "typesafe-actions": "5.1.0",
+    "webpack-dev-middleware": "4.1.0"
   },
   "husky": {
     "hooks": {
