--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@types/react-router": "5.1.8",
     "@types/react-router-dom": "5.1.6",
     "@types/react-tooltip": "4.2.4",
+    "@types/sequelize": "4.28.9",
     "@types/webpack-dev-middleware": "4.1.0",
     "@types/webpack-hot-middleware": "2.25.3",
     "@types/webpack-node-externals": "2.5.0",
