--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@hot-loader/react-dom": "17.0.1",
     "@types/classnames": "2.2.11",
     "@types/express": "4.17.11",
+    "@types/morgan": "1.9.2",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
     "@types/react-hot-loader": "4.1.1",
@@ -73,7 +74,6 @@
     "resolve-url-loader": "3.1.2",
     "sass": "1.30.0",
     "sass-loader": "10.1.0",
-    "start-server-webpack-plugin": "2.2.5",
     "stylelint": "13.8.0",
     "stylelint-config-standard": "20.0.0",
     "stylelint-scss": "3.18.0",
@@ -89,18 +89,13 @@
     "workbox-webpack-plugin": "6.0.2"
   },
   "dependencies": {
-    "@types/compression": "1.7.0",
-    "@types/copy-webpack-plugin": "6.4.0",
-    "@types/css-minimizer-webpack-plugin": "1.1.1",
-    "@types/mini-css-extract-plugin": "1.2.2",
-    "@types/react-helmet": "6.1.0",
-    "@types/terser-webpack-plugin": "5.0.2",
-    "@types/workbox-webpack-plugin": "5.1.5",
     "axios": "0.21.1",
     "classnames": "2.2.6",
     "compression": "1.7.4",
     "connected-react-router": "6.8.0",
     "easy-bem": "1.0.2",
+    "howler": "2.2.1",
+    "morgan": "1.10.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "6.1.0",
