--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,8 +22,9 @@ services:
             - "5433:5432"
         volumes:
             - ./pg-data:/var/lib/postgresql
+            - ./src/migrations/dbinit.sql
         environment:
-            PGDATA: /var/lib/postgresql/data/pgdata
+            PGDATA: /var/lib/postgresql/data/mydata
             POSTGRES_USER: postgres
             POSTGRES_PASSWORD: newPassword
             POSTGRES_DB: packman
