--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "main": "index.js",
     "scripts": {
         "test": "jest",
-        "start": "webpack --env NODE_ENV=development --config webpack/server.config.ts && npm run server:dev",
-        "server:dev": "cross-env NODE_ENV=development node dist/server.js",
+        "start": "webpack --env NODE_ENV=development --config webpack/server.config.ts",
         "server": "node dist/server.js",
         "build": "webpack --env NODE_ENV=production",
         "deploy": "npm run build && npm run server",
@@ -37,23 +36,27 @@
         "@types/classnames": "2.2.11",
         "@types/compression": "1.7.0",
         "@types/cookie-parser": "1.4.2",
+        "@types/copy-webpack-plugin": "6.4.0",
+        "@types/css-minimizer-webpack-plugin": "1.1.1",
+        "@types/enzyme": "3.10.8",
+        "@types/enzyme-adapter-react-16": "1.0.6",
         "@types/express": "4.17.11",
+        "@types/jest": "26.0.20",
+        "@types/mini-css-extract-plugin": "1.2.2",
         "@types/morgan": "1.9.2",
         "@types/react": "17.0.0",
         "@types/react-dom": "17.0.0",
+        "@types/react-helmet": "6.1.0",
         "@types/react-hot-loader": "4.1.1",
         "@types/react-redux": "7.1.15",
         "@types/react-router": "5.1.8",
         "@types/react-router-dom": "5.1.6",
+        "@types/react-test-renderer": "17.0.0",
         "@types/react-tooltip": "4.2.4",
+        "@types/terser-webpack-plugin": "5.0.2",
         "@types/webpack-dev-middleware": "4.1.0",
         "@types/webpack-hot-middleware": "2.25.3",
         "@types/webpack-node-externals": "2.5.0",
-        "@types/copy-webpack-plugin": "6.4.0",
-        "@types/css-minimizer-webpack-plugin": "1.1.1",
-        "@types/mini-css-extract-plugin": "1.2.2",
-        "@types/react-helmet": "6.1.0",
-        "@types/terser-webpack-plugin": "5.0.2",
         "@types/workbox-webpack-plugin": "5.1.5",
         "@typescript-eslint/eslint-plugin": "4.10.0",
         "@typescript-eslint/parser": "4.10.0",
@@ -64,6 +67,8 @@
         "css-hot-loader": "1.4.4",
         "css-loader": "5.0.1",
         "css-minimizer-webpack-plugin": "1.1.5",
+        "enzyme": "3.11.0",
+        "enzyme-adapter-react-16": "1.15.6",
         "eslint": "7.15.0",
         "eslint-config-xo": "^0.33.1",
         "eslint-plugin-react": "^7.21.5",
@@ -72,12 +77,14 @@
         "file-loader": "6.2.0",
         "html-webpack-plugin": "4.5.0",
         "husky": "4.3.6",
+        "jest": "26.6.3",
         "mini-css-extract-plugin": "1.3.3",
         "nodemon": "2.0.7",
         "npm-run-all": "4.1.5",
         "null-loader": "4.0.1",
         "react-hot-loader": "4.13.0",
         "react-refresh": "0.9.0",
+        "react-test-renderer": "17.0.1",
         "redux-devtools-extension": "2.13.8",
         "resolve-url-loader": "3.1.2",
         "sass": "1.30.0",
@@ -87,6 +94,7 @@
         "stylelint-scss": "3.18.0",
         "svg-inline-loader": "0.8.2",
         "terser-webpack-plugin": "5.1.1",
+        "ts-jest": "26.4.4",
         "ts-loader": "8.0.12",
         "typescript": "4.1.3",
         "webpack": "5.10.1",
@@ -94,16 +102,7 @@
         "webpack-dev-server": "3.11.2",
         "webpack-hot-middleware": "2.25.0",
         "webpack-node-externals": "2.5.2",
-        "workbox-webpack-plugin": "6.0.2",
-        "@types/enzyme": "3.10.8",
-        "@types/enzyme-adapter-react-16": "1.0.6",
-        "@types/jest": "26.0.20",
-        "@types/react-test-renderer": "17.0.0",
-        "enzyme": "3.11.0",
-        "enzyme-adapter-react-16": "1.15.6",
-        "jest": "26.6.3",
-        "react-test-renderer": "17.0.1",
-        "ts-jest": "26.4.4"
+        "workbox-webpack-plugin": "6.0.2"
     },
     "dependencies": {
         "@types/copy-webpack-plugin": "6.4.0",
@@ -137,7 +136,8 @@
         "sequelize": "6.5.0",
         "sequelize-typescript": "2.1.0",
         "typesafe-actions": "5.1.0",
-        "webpack-dev-middleware": "4.1.0"
+        "webpack-dev-middleware": "4.1.0",
+        "webpack-shell-plugin-next": "2.2.2"
     },
     "husky": {
         "hooks": {
