--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "main": "index.js",
     "scripts": {
         "test": "jest",
-        "build:dev": "webpack --env NODE_ENV=development --config webpack/index.ts",
-        "start:api:nodemon": "nodemon --watch dist dist/server.js",
+        "build:client": "webpack --env NODE_ENV=development --env DEV=api --config webpack/index.ts",
+        "start:api:nodemon": "cross-env NODE_ENV=development DEV=api nodemon --legacy-watch --watch dist dist/server.js",
         "start:api:webpack": "webpack --env NODE_ENV=development --config webpack/server.config.ts --watch",
-        "start:api": "npm run build:dev && run-p start:api:*",
+        "start:api": "npm run build:client && run-p start:api:*",
+        "start:client": "webpack --env NODE_ENV=development --config webpack/server.config.ts && npm run server:dev",
+        "server:dev": "cross-env NODE_ENV=development node dist/server.js",
         "server": "node dist/server.js",
         "build": "webpack --env NODE_ENV=production",
         "deploy": "npm run build && npm run server",
