--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,10 +7,10 @@ services:
         links:
             - postgres
             - mongo
+        env_file: .env
         environment:
-            DATABASE_POSTGRES_URL: postgres://postgres:newPassword@postgres:5432/packman
-            DATABASE_MONGO_URL: mongodb://mongo:27017/packman
-            PORT: 8080
+            - DATABASE_MONGO_URL=$DATABASE_MONGO_URL
+            - PORT=8080
         ports:
             - "8080:8080"
         restart: always
@@ -23,18 +23,20 @@ services:
             - ./postgresdata:/var/lib/postgresql/data
             - ./server/migrations/dbinit.sql:/docker-entrypoint-initdb.d/dbinit.sql
         restart: always
+        env_file: .env
         environment:
-            POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: newPassword
-            POSTGRES_DB: packman
+            - POSTGRES_USER=$POSTGRES_USER
+            - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+            - POSTGRES_DB=$POSTGRES_DB
     pgadmin:
         container_name: pgadmin
         image: dpage/pgadmin4:4.18
         restart: always
+        env_file: .env
         environment:
-            PGADMIN_DEFAULT_EMAIL: admin@admin.com
-            PGADMIN_DEFAULT_PASSWORD: secret
-            PGADMIN_LISTEN_PORT: "5001"
+            - PGADMIN_DEFAULT_EMAIL=$PGADMIN_DEFAULT_EMAIL
+            - PGADMIN_DEFAULT_PASSWORD=$PGADMIN_DEFAULT_PASSWORD
+            - PGADMIN_LISTEN_PORT=5001
         ports:
             - "5001:5001"
         volumes:
