--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ services:
             DATABASE_POSTGRES_URL: postgres://postgres:newPassword@postgres:5432/packman
             DATABASE_MONGO_URL: mongodb://mongo:27017/packman
             PORT: 8080
+            FORUM_API: http://localhost:9001
         ports:
             - "8080:8080"
         restart: always
