--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,7 +25,7 @@ services:
         ports:
             - "5432:5432"
         volumes:
-            - ./postgresdata:/var/lib/postgresql/data
+            - ./pg-data:/var/lib/postgresql
             - ./server/migrations/dbinit.sql:/docker-entrypoint-initdb.d/dbinit.sql
         restart: always
         env_file: .env
@@ -34,7 +34,6 @@ services:
             - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
             - POSTGRES_DB=$POSTGRES_DB
     pgadmin:
-        container_name: pgadmin
         image: dpage/pgadmin4:4.18
         restart: always
         env_file: .env
@@ -54,7 +53,7 @@ services:
             - "27017:27017"
         restart: always
         volumes:
-            - data-volume:/data/db
+            - mongo-data:/data/db
     mongo-express:
         image: mongo-express
         ports:
@@ -65,7 +64,7 @@ services:
         environment:
             - ME_CONFIG_MONGODB_PORT=27017
 volumes:
-    db-data:
+    pg-data:
     pgadmin-data:
-    data-volume:
+    mongo-data:
     node_modules:
