--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,10 +9,9 @@ services:
             - mongo
         env_file: .env
         environment:
-            - DATABASE_POSTGRES_URL: postgres://postgres:newPassword@postgres:5432/packman
+            - DATABASE_POSTGRES_URL=$DATABASE_POSTGRES_URL
             - DATABASE_MONGO_URL=$DATABASE_MONGO_URL
             - PORT=8080
-            - FORUM_API: http://localhost:9001
         ports:
             - "8080:8080"
         restart: always
@@ -22,17 +21,15 @@ services:
         ports:
             - "5432:5432"
         volumes:
-            - ./pg-data:/var/lib/postgresql/data
+            - ./pg-data:/var/lib/postgresql
             - ./server/migrations/dbinit.sql:/docker-entrypoint-initdb.d/dbinit.sql
         restart: always
         env_file: .env
         environment:
-            - PGDATA: /var/lib/postgresql/data/mydata
             - POSTGRES_USER=$POSTGRES_USER
             - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
             - POSTGRES_DB=$POSTGRES_DB
     pgadmin:
-        container_name: pgadmin
         image: dpage/pgadmin4:4.18
         restart: always
         env_file: .env
