--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
             DATABASE_POSTGRES_URL: postgres://postgres:newPassword@postgres:5432/packman
                 - DATABASE_MONGO_URL=$DATABASE_MONGO_URL
             PORT: 8080
-            FORUM_API: http://localhost:9001
+            FORUM_API: https://localhost:9001
         ports:
             - "8080:8080"
         restart: always
