--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
         "@types/react-test-renderer": "17.0.0",
         "@types/react-tooltip": "4.2.4",
         "@types/sequelize": "4.28.9",
+        "@types/styled-components": "5.1.9",
         "@types/terser-webpack-plugin": "5.0.2",
         "@types/webpack-dev-middleware": "4.1.0",
         "@types/webpack-hot-middleware": "2.25.3",
@@ -145,6 +146,7 @@
         "sequelize": "6.5.0",
         "sequelize-cli": "6.2.0",
         "sequelize-typescript": "2.1.0",
+        "styled-components": "5.2.1",
         "typesafe-actions": "5.1.0",
         "webpack-dev-middleware": "4.1.0",
         "webpack-shell-plugin-next": "2.2.2"
