--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
         "connected-react-router": "6.8.0",
         "cookie-parser": "1.4.5",
         "easy-bem": "1.0.2",
+        "express-jsdoc-swagger": "1.3.2",
         "howler": "2.2.1",
         "mongoose": "5.11.18",
         "morgan": "1.10.0",
