--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,13 +2,13 @@
 
 name: CD_Yandex
 
-# Controls when the action will run. 
+# Controls when the action will run.
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ oblako_Cd ]
   pull_request:
-    branches: [ main ]
+    branches: [ oblako_Cd ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
