--- a/.github/workflows/withSsh.yml
+++ b/.github/workflows/withSsh.yml
@@ -6,9 +6,9 @@ name: SSH_Deploy
 on:
     # Triggers the workflow on push or pull request events but only for the main branch
     push:
-        branches: [ main ]
+        branches: [ oblako_Cd ]
     pull_request:
-        branches: [ main ]
+        branches: [ oblako_Cd ]
 
     # Allows you to run this workflow manually from the Actions tab
     workflow_dispatch:
