--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,34 +1,36 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CD_Yandex
+name: SSH_Deploy
 
 # Controls when the action will run.
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ oblako_Cd ]
-  pull_request:
-    branches: [ oblako_Cd ]
+    # Triggers the workflow on push or pull request events but only for the main branch
+    push:
+        branches: [ oblako_Cd ]
+    pull_request:
+        branches: [ oblako_Cd ]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    # Allows you to run this workflow manually from the Actions tab
+    workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  deploy:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    # This workflow contains a single job called "build"
+    deploy:
+        # The type of runner that the job will run on
+        runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+        # Steps represent a sequence of tasks that will be executed as part of the job
+        steps:
+            # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+            - uses: actions/checkout@v2
 
-      # Runs a single command using the runners shell
-      - name: deploy
-        uses: actions/setup-node@v1
-        with:
-          node-version: '12.x'
-      - run: npm run deploy
+            # Runs a single command using the runners shell
+            - name: deploy
+              uses: garygrossgarten/github-action-ssh@release
+              with:
+                  command: cd dist && ./build.sh
+                  host: geneva-pacman-02.ya-praktikum.tech/
+                  username: Dierkalalala
+                  privateKey: ${{ secrets.SSH_CLOUD_KEY}}
 
