--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,32 +9,28 @@ services:
             - mongo
         env_file: .env
         environment:
-            DATABASE_POSTGRES_URL: postgres://postgres:newPassword@postgres:5432/packman
-                - DATABASE_MONGO_URL=$DATABASE_MONGO_URL
-            PORT: 8080
-            FORUM_API: https://localhost:9001
+            - DATABASE_POSTGRES_URL=$DATABASE_POSTGRES_URL
+            - DATABASE_MONGO_URL=$DATABASE_MONGO_URL
+            - PORT=8080
+            - FORUM_API=https://localhost:9001
         ports:
             - "8080:8080"
         restart: always
     postgres:
         container_name: postgres
         image: postgres:12
-        restart: always
         ports:
-            - "5433:5432"
+            - "5432:5432"
         volumes:
             - ./pg-data:/var/lib/postgresql
-            - ./src/migrations/dbinit.sql
+            - ./server/db/postgres/migrations/dbinit.sql:/docker-entrypoint-initdb.d/dbinit.sql
+        restart: always
         env_file: .env
         environment:
-            PGDATA: /var/lib/postgresql/data/mydata
-            POSTGRES_USER: postgres
-            POSTGRES_PASSWORD: newPassword
-            POSTGRES_DB: packman
-
-
+            - POSTGRES_USER=$POSTGRES_USER
+            - POSTGRES_PASSWORD=$POSTGRES_PASSWORD
+            - POSTGRES_DB=$POSTGRES_DB
     pgadmin:
-        container_name: pgadmin
         image: dpage/pgadmin4:4.18
         restart: always
         env_file: .env
@@ -54,7 +50,7 @@ services:
             - "27017:27017"
         restart: always
         volumes:
-            - data-volume:/data/db
+            - mongo-data:/data/db
     mongo-express:
         image: mongo-express
         ports:
