--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
         "@types/react-router-dom": "5.1.6",
         "@types/react-test-renderer": "17.0.0",
         "@types/react-tooltip": "4.2.4",
+        "@types/sequelize": "4.28.9",
+        "@types/styled-components": "5.1.9",
         "@types/terser-webpack-plugin": "5.0.2",
         "@types/webpack-dev-middleware": "4.1.0",
         "@types/webpack-hot-middleware": "2.25.3",
@@ -94,6 +96,8 @@
         "resolve-url-loader": "3.1.2",
         "sass": "1.30.0",
         "sass-loader": "10.1.0",
+        "start-server-webpack-plugin": "2.2.5",
+        "styled-components": "5.2.1",
         "stylelint": "13.8.0",
         "stylelint-config-standard": "20.0.0",
         "stylelint-scss": "3.18.0",
@@ -118,11 +122,13 @@
         "@types/terser-webpack-plugin": "5.0.2",
         "@types/workbox-webpack-plugin": "5.1.5",
         "axios": "0.21.1",
+        "body-parser": "1.19.0",
         "classnames": "2.2.6",
         "compression": "1.7.4",
         "connected-react-router": "6.8.0",
         "cookie-parser": "1.4.5",
         "easy-bem": "1.0.2",
+        "express-jsdoc-swagger": "1.3.2",
         "howler": "2.2.1",
         "mongoose": "5.11.18",
         "morgan": "1.10.0",
@@ -140,6 +146,7 @@
         "reflect-metadata": "0.1.13",
         "reselect": "4.0.0",
         "sequelize": "6.5.0",
+        "sequelize-cli": "6.2.0",
         "sequelize-typescript": "2.1.0",
         "typesafe-actions": "5.1.0",
         "webpack-dev-middleware": "4.1.0",
